<resources>
    <string name="app_name">Class2021_2022_2_AndroidDevelop_course</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_fragment_label">MenuFragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="menu_fragment">menu_fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="imageview_scr_set_image_view_1image_drawable">设置第一个ImageView按照前景显示(Scr)(setImageDrawable())</string>
    <string name="imageview_scr_set_image_view_2image_background">设置第二个ImageView按照背景显示(background)(setBackgroundDrawable())</string>
    <string name="button_to_ex_image_view">button_to_ex_image_view</string>
    <string name="set_max_min_width_or_height_and_enable_adjust">设置第一个ImageView设置其最大宽高为100并开启自适应</string>
    <string name="set_width_and_height">设置第二个ImageView直接使用宽和高设置其大小各自为100</string>
    <string name="imageview1">ImageView1</string>
    <string name="imageview2">ImageView2</string>
    <string name="button_to_ex_gallery">button_to_ex_gallery</string>
    <string name="imageview">ImageView</string>
    <string name="show_message">提示消息</string>
    <string name="button_to_ex_alert_message_dialog">button_to_ex_alert_message_dialog</string>
    <string name="ProgressDialog">ProgressDialog</string>
    <string name="date_picker_dialog">DatePickerDialog</string>
    <string name="time_picker_dialog">TimePickerDialog</string>
    <string name="button_to_ex_other_dialogs">button_to_ex_other_dialogs</string>
    <string name="to_activity">to another activity</string>
    <string name="example_activity">Example Activity</string>
    <string name="live_for_yourself">Live For Yourself</string>
    <string name="button_to_ex_to_activity">button_to_ex_to_activity</string>
</resources>